@@ -1,3 +1,8 @@
+2006-07-18  Paolo Bonzini  <bonzini@gnu.org>
+
+        * Makefile.tpl (configure-stageN-MODULE): Pass --with-build-libsubdir
+        for stages after the first.
+
 2006-07-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* Makefile.def: Add dependencies for configure-opcodes
